[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bam_gym"]

[project]
name = "bam_gym"
version = "0.0.1"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "pre-commit",
  "roslibpy",
  "typeguard",
  "pyyaml",
  "opencv-python",
  "matplotlib"
]
